crates/ditto-checker/tests/golden/type-errors/unknown_constructor.ditto
module Test exports (..)

bang = Nada
